--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <h2>Here is a link to my <a href= "https://www.linkedin.com/in/shreyas-shankar-37636053">LinkedIn</a> profile.</h2>
             <h2>A link to my <a href="https://github.com/shreyas-shankar">GitHub</a> profile.</h2>
-            <h2>You can find my <a href="">resume</a> here.</h2>
+            <h2>You can find my <a href="https://drive.google.com/open?id=0B5qN-odX9MBKdDRFRkYxVk9fSHc">resume</a> here.</h2>
             <br>
             <h2>Email me at
                 <strong>shreyas</strong><span style="color:red"> [dot] </span> <strong>shankar23</strong> <span style="color:red"> [at] </span> <strong>gmail</strong> <span style="color:red"> [dot] </span> <strong>com</strong></h2>
