Changing linkedin and github lines

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <h2>Previously, I worked as a Solutions Architect at Akamai Technologies in Bangalore, India.</h2>
             <br>
 
-            <h2>Here is a link to my <a href= "https://www.linkedin.com/in/shreyas-shankar-37636053">LinkedIn</a> profile.</h2>
-            <h2>A link to my <a href="https://github.com/shreyas-shankar">GitHub</a> profile.</h2>
+            <h2>Here is my <a href= "https://www.linkedin.com/in/shreyas-shankar-37636053">LinkedIn</a> profile.</h2>
+            <h2>And my <a href="https://github.com/shreyas-shankar">GitHub</a> profile.</h2>
             <h2>You can find my <a href="https://drive.google.com/open?id=0B5qN-odX9MBKdDRFRkYxVk9fSHc">resume</a> here.</h2>
             <br>
             <h2>Email me at
